syntax="proto3";

package user;

service UserService{
    rpc Register(RegisterReq)  returns(UserRes){}
    rpc GetUserById(UserIdReq) returns(UserRes){}
    rpc DeleteUser(UserIdReq)  returns(DeleteRes){}
    rpc UpdateUser(UpdateReq) returns(UserRes){}
}

message GetAllUsersReq{
    int32 page = 1;
    int32 limit = 2;
}

message UsersList{
    repeated UserRes Users = 1;
}

message RegisterReq{
    string name = 1;
    int32  age  = 2;
}

message UserRes{
    int32   id   = 1;
    string  name = 2;
    int32   age  = 3;
}

message UpdateReq{
    int32   id   = 1;
    string  name = 2;
    int32   age  = 3;
}


message UserIdReq{
    int32 id = 1;
}

message DeleteRes{
    bool deleted = 1;
}

